; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/meson/extr_meson_dw_hdmi.c_meson_dw_hdmi_reg_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/meson/extr_meson_dw_hdmi.c_meson_dw_hdmi_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.meson_dw_hdmi = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.meson_dw_hdmi*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32*)* @meson_dw_hdmi_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meson_dw_hdmi_reg_read(i8* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.meson_dw_hdmi*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.meson_dw_hdmi*
  store %struct.meson_dw_hdmi* %9, %struct.meson_dw_hdmi** %7, align 8
  %10 = load %struct.meson_dw_hdmi*, %struct.meson_dw_hdmi** %7, align 8
  %11 = getelementptr inbounds %struct.meson_dw_hdmi, %struct.meson_dw_hdmi* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.meson_dw_hdmi*, i32)*, i32 (%struct.meson_dw_hdmi*, i32)** %13, align 8
  %15 = load %struct.meson_dw_hdmi*, %struct.meson_dw_hdmi** %7, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 %14(%struct.meson_dw_hdmi* %15, i32 %16)
  %18 = load i32*, i32** %6, align 8
  store i32 %17, i32* %18, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
